# AI_sign_language_glove

./: .gitignore  CMakeLists.txt  sdkconfig.defaults
app/: ble_notify.c  ble_notify.h  button.cpp  button.h  espnow_sender.h  espnow_sender_wrapper.cpp  inference.cpp  inference.h  label_counter.c  label_counter.h  recorder.c  recorder.h
hardware/: mpu6050.c  mpu6050.h  potentiometer.c  potentiometer.h  sdcard.c  sdcard.h
main/: CMakeLists.txt  README.txt  main.c
main/edge-impulse-sdk/porting/espressif/: ei_classifier_porting.cpp
main/edge-impulse-sdk/porting/espressif/esp-dsp/modules/common/misc/: dsps_pwroftwo.cpp
main/edge-impulse-sdk/porting/espressif/esp-dsp/modules/fft/float/: dsps_fft2r_bitrev_tables_fc32.c  dsps_fft2r_fc32_ansi.c
main/model-parameters/: model_metadata.h  model_variables.h
main/tflite-model/: tflite_learn_991408_14_compiled.cpp  tflite_learn_991408_14_compiled.h  tflite_learn_991408_9_compiled.cpp  tflite_learn_991408_9_compiled.h  trained_model_ops_define.h
software/: get_data.c  get_data.h
