idf_component_register(SRCS "main.c"
                    "../hardware/sdcard.c"
                    "../hardware/mpu6050.c"
                    "../hardware/potentiometer.c"
                    "../software/get_data.c"
                    "../app/label_counter.c"
                    "../app/recorder.c"
                    "../app/inference.cpp"  # 新增推理模块
                    "../app/button.cpp"      # 新增按钮模块
                    "../app/espnow_sender_wrapper.cpp"  # ESP-NOW发送模块（C++包装）
                    "tflite-model/tflite_learn_991408_9_compiled.cpp"
                    # KISS FFT 源文件
                    "edge-impulse-sdk/dsp/kissfft/kiss_fft.cpp"
                    "edge-impulse-sdk/dsp/kissfft/kiss_fftr.cpp"
                    # ESP-DSP 模块源文件
                    "edge-impulse-sdk/porting/espressif/esp-dsp/modules/common/misc/dsps_pwroftwo.cpp"
                    "edge-impulse-sdk/porting/espressif/esp-dsp/modules/fft/fixed/dsps_fft2r_sc16_ansi.c"
                    "edge-impulse-sdk/porting/espressif/esp-dsp/modules/fft/float/dsps_fft2r_fc32_ansi.c"
                    "edge-impulse-sdk/porting/espressif/esp-dsp/modules/fft/float/dsps_fft2r_bitrev_tables_fc32.c"
                    "edge-impulse-sdk/porting/espressif/esp-dsp/modules/fft/float/dsps_fft2r_fc32_ae32.c"
                    # Edge Impulse 移植层源文件
                    "edge-impulse-sdk/porting/espressif/ei_classifier_porting.cpp"
                    "edge-impulse-sdk/porting/espressif/debug_log.cpp"
                    # TensorFlow Lite Core API
                    "edge-impulse-sdk/tensorflow/lite/core/api/common.cc"
                    "edge-impulse-sdk/tensorflow/lite/core/api/error_reporter.cc"
                    "edge-impulse-sdk/tensorflow/lite/core/api/flatbuffer_conversions.cc"
                    "edge-impulse-sdk/tensorflow/lite/core/api/op_resolver.cc"
                    "edge-impulse-sdk/tensorflow/lite/core/api/tensor_utils.cc"
                    # TensorFlow Lite Micro
                    "edge-impulse-sdk/tensorflow/lite/micro/all_ops_resolver.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/fake_micro_context.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/flatbuffer_conversions_bridge.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/flatbuffer_utils.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/activations.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/activations_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/add.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/add_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/add_n.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/arg_min_max.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/assign_variable.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/batch_matmul.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/batch_to_space_nd.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/broadcast_args.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/broadcast_to.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/call_once.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/cast.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/ceil.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/circular_buffer.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/circular_buffer_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/comparisons.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/complex_abs.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/concatenation.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/conv.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/conv_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/cumsum.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/depth_to_space.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/depthwise_conv.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/depthwise_conv_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/dequantize.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/dequantize_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/detection_postprocess.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/div.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/elementwise.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/elu.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/ethosu.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/exp.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/expand_dims.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/fill.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/floor.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/floor_div.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/floor_mod.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/fully_connected.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/fully_connected_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/gather.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/gather_nd.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/hard_swish.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/hard_swish_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/if.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/kernel_runner.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/kernel_util_micro.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/l2_pool_2d.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/l2norm.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/leaky_relu.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/leaky_relu_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/log_softmax.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/logical.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/logical_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/logistic.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/logistic_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/lstm_eval.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/maximum_minimum.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/micro_tensor_utils.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/mirror_pad.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/mli_interface.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/mli_slicers.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/mul.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/mul_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/neg.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/pack.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/pooling.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/pooling_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/quantize_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/reduce_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/softmax_common.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/sub_common.cc"
                    # TensorFlow Lite Kernels Internal
                    "edge-impulse-sdk/tensorflow/lite/kernels/internal/quantization_util.cc"
                    "edge-impulse-sdk/tensorflow/lite/kernels/internal/portable_tensor_utils.cc"
                    "edge-impulse-sdk/tensorflow/lite/kernels/internal/reference_portable_tensor_utils.cc"
                    "edge-impulse-sdk/tensorflow/lite/kernels/kernel_util_lite.cc"
                    # TensorFlow Lite Micro 核心组件
                    "edge-impulse-sdk/tensorflow/lite/micro/micro_context.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/micro_allocator.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/micro_graph.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/micro_interpreter.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/micro_utils.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/micro_error_reporter.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/single_arena_buffer_allocator.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/persistent_arena_buffer_allocator.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/non_persistent_arena_buffer_allocator.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/memory_planner/linear_memory_planner.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/memory_planner/greedy_memory_planner.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/kernels/softmax.cc"
                    # TensorFlow Lite Micro 工具函数
                    "edge-impulse-sdk/tensorflow/lite/micro/micro_log.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/micro_string.cc"
                    "edge-impulse-sdk/tensorflow/lite/micro/memory_helpers.cc"
                    INCLUDE_DIRS "."
                    "../hardware"
                    "../software"
                    "../app"
                    "edge-impulse-sdk"
                    "edge-impulse-sdk/CMSIS/Core/Include"
                    "edge-impulse-sdk/CMSIS/DSP/Include"
                    "edge-impulse-sdk/third_party/flatbuffers/include"
                    "edge-impulse-sdk/porting/espressif/esp-dsp/modules/common/include"
                    "edge-impulse-sdk/porting/espressif/esp-dsp/modules/fft/include"
                    "edge-impulse-sdk/tensorflow/lite"
                    "edge-impulse-sdk/tensorflow/lite/c"
                    "edge-impulse-sdk/tensorflow/lite/core/api"
                    "model-parameters"
                    "tflite-model"
                    REQUIRES driver
                    REQUIRES fatfs
                    REQUIRES esp_timer
                    REQUIRES nvs_flash
                    REQUIRES esp_adc
                    REQUIRES esp_netif
                    REQUIRES esp_wifi)

# 禁用弃用警告（Edge Impulse SDK 使用了 std::is_pod 等已弃用的 API）
target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-deprecated-declarations")